--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
         <div class="cabecera">
             <div class="enlaces-cabecera">
-            <a class="cursos" href="cursos.html">CURSOS</a>
+            <a class="cursos" href="cursos.html">CURSOS FOREX</a>
             <a class="sistema" href="sistema-trading.html">MI SISTEMA DE TRADING</a>
             </div>
         </div>
@@ -65,7 +65,7 @@
                 <article>
                     <div class="padre01-padre02">
                         <div class="padre01">
-                            <h3 class="explora-los-cursos">EXPLORA LOS CURSOS</h3>
+                            <h3 class="explora-los-cursos">EXPLORA LOS CURSOS FOREX</h3>
                         </div>
                         <div class="padre02">
                             <a href="curso-inicial.html"><div class="hijo"><h3>CURSO INICIAL</h3></div></a>
@@ -74,7 +74,7 @@
                     </div>
 
                     <div class="padre03">
-                        <div class="hijo03"><h2>EXPLORA EL SISTEMA DE TRADING</h2></div>
+                        <div class="hijo03"><h2>EXPLORA MI SISTEMA DE TRADING</h2></div>
                         <a href="sistema-trading.html"><div class="hijo04"><h3>MI SISTEMA DE TRADING</h3></div></a>
                     </div>
                 </article>
@@ -119,7 +119,7 @@
         <div class="contenedor-footer">
             <div class="contenedor-principal">
                 <div class="Columna1">
-                    <h1>CURSOS</h1>
+                    <h1>CURSOS FOREX</h1>
                     <p><a href="curso-inicial.html">Curso Inicial</a></p>
                     <p><a href="curso-avanzado.html">Curso Avanzado</a></p>
                     <p><a href="sistema-trading.html">Mi Sistema de Trading</a></p>
