--- a/curso-avanzado-descargar.html
+++ b/curso-avanzado-descargar.html
@@ -32,6 +32,8 @@
                 </button>
             </a>
 
+            <p>Academia de Forex</p>
+            
             <a href="index.html" class="logo">
                 <img src="logo.png" alt="logotipo de ANG" width="70">
             </a>
@@ -93,7 +95,7 @@
         <div class="contenedor-footer">
             <div class="contenedor-principal">
                 <div class="Columna1">
-                    <h1>CURSOS</h1>
+                    <h1>CURSOS FOREX</h1>
                     <p><a href="curso-inicial.html">Curso Inicial</a></p>
                     <p><a href="curso-avanzado.html">Curso Avanzado</a></p>
                     <p><a href="sistema-trading.html">Mi Sistema de Trading</a></p>
