--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
                 </button>
             </a>
 
+            <p>Academia de Forex</p>
+            
             <a href="index.html" class="logo">
                 <img src="logo.png" alt="logotipo de ANG" width="70">
             </a>
