--- a/politica-privacidad.html
+++ b/politica-privacidad.html
@@ -32,7 +32,7 @@
                 </button>
             </a>
 
-            <p>Academia de Forex</p>
+            <p>Academia de Forex</br>online en Barcelona</p>
             
             <a href="index.html" class="logo">
                 <img src="logo.png" alt="logotipo de ANG" width="70">
