Con nuevo footer

--- a/politica-privacidad.html
+++ b/politica-privacidad.html
@@ -107,24 +107,31 @@
                     <p><a href="contacto.html">Contacto</a></p>
                     <p><a href="https://www.instagram.com/arturofxtrader/">Instagram</a></p>
                     <p><a href="https://www.facebook.com/molotradecompany/?eid=ARBUm0FwOPu5uYTJV7I9iOMqn5o8Bftzfcxwg_1f8trBSnq05sWAxTLF8_Qp3DpBfdNMLTtzlj6nEE0x">Facebook</a></p>
-                    <!--<p><a href="#">Acerca de</a></p>-->
                 </div>
             </div>
             
             <div class="subcontenedor">
                 <div class="columna01">
                     <h1>CURSOS</h1>
-                    <p>Copyright @2020 |</p>
+                    <p class="span">
+                        <span>
+                            <img class="paypal" src="paypal.png" width="30rem" height="25rem">
+                            <img class="visa" src="visa.png" width="30rem" height="25rem">
+                            <img class="mastercard" src="mastercard.png" width="30rem" height="25rem">
+                        </span>
+                    </p>
                 </div>
 
                 <div class="columna02">
                     <h1>INFORMACIÓN</h1>
-                    <!--<p><img src="imagenes/logo.png" width="86px" height="36px"></p>--> 
+                    <p class="copryright">Copyright @2020 |</p>
+                    <br>
+                    <p>Creado por <a href="https://www.instagram.com/arturofxtrader/">@arturofxtrader</a></p> 
                 </div>
 
                 <div class="columna03">
                     <h1>MÁS INFORMACIÓN</h1>
-                    <p><a href="index.html">Inicio</a></p>
+                    <p><a href="index.html">Volver a Inicio</a></p>
                 </div>
             </div>
         </div>
