--- a/curso-inicial-descargar.html
+++ b/curso-inicial-descargar.html
@@ -119,17 +119,25 @@
             <div class="subcontenedor">
                 <div class="columna01">
                     <h1>CURSOS</h1>
-                    <p>Copyright @2020 |</p>
+                    <p class="span">
+                        <span>
+                            <img class="paypal" src="paypal.png" width="30rem" height="25rem">
+                            <img class="visa" src="visa.png" width="30rem" height="25rem">
+                            <img class="mastercard" src="mastercard.png" width="30rem" height="25rem">
+                        </span>
+                    </p>
                 </div>
 
                 <div class="columna02">
                     <h1>INFORMACIÓN</h1>
-                    <!--<p><img src="imagenes/logo.png" width="86px" height="36px"></p>--> 
+                    <p class="copryright">Copyright @2020 |</p>
+                    <br>
+                    <p>Creado por <a href="https://www.instagram.com/arturofxtrader/">@arturofxtrader</a></p> 
                 </div>
 
                 <div class="columna03">
                     <h1>MÁS INFORMACIÓN</h1>
-                    <p><a href="index.html">Inicio</a></p>
+                    <p><a href="index.html">Volver a Inicio</a></p>
                 </div>
             </div>
         </div>
