--- a/politica-privacidad.html
+++ b/politica-privacidad.html
@@ -6,7 +6,7 @@
     <!-----------------------------------Diseño de la barra del buscador------------------------------>
     <head>
         <!--Título del sitio web-->
-        <title>Molo Trade Co.</title>
+        <title>Cursos de trading en Barcelona. Accede a los cursos Forex y al sistema de trading de la mejor academia online de Forex en Barcelona</title>
         <!--Para poder usar palabras acentuadas-->
         <meta charset="UTF-8">
         <!--Para que el ancho de la web sea igual que el ancho del dispositivo-->
@@ -35,7 +35,7 @@
             <p>Academia de Forex</br>online en Barcelona</p>
             
             <a href="index.html" class="logo">
-                <img src="logo.png" alt="logotipo de ANG" width="70">
+                <img src="logo.png" alt="logo" width="70">
             </a>
         </div>
 
