--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <!----------------------------------Diseño de la barra del buscador----------------------------->
     <head>
         <!--Título del sitio web-->
-        <title>Cursos de trading en Barcelona. Accede a los cursos Forex y al sistema de trading de la mejor academia online de Forex en Barcelona</title>
+        <title>Molo Trade Co.</title>
+        <!--Descripción de la página-->
+        <meta name="description" content="Cursos de trading en Barcelona. Accede a los cursos Forex y al sistema de trading de la mejor academia online de Forex en Barcelona.">
         <!--Para poder usar palabras acentuadas-->
         <meta charset="UTF-8">
         <!--Para que el ancho de la web sea igual que el ancho del dispositivo-->
