--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <!--Título del sitio web-->
         <title>Molo Trade Co.</title>
         <!--Descripción de la página-->
-        <meta name="description" content="Cursos de trading en Barcelona. Accede a los cursos Forex y al sistema de trading de la mejor academia online de Forex en Barcelona.">
+        <meta name="description" content="Cursos de trading en Barcelona. Accede a los cursos Forex y al sistema de trading de la mejor academia online de Forex en Barcelona."/>
         <!--Para poder usar palabras acentuadas-->
         <meta charset="UTF-8">
         <!--Para que el ancho de la web sea igual que el ancho del dispositivo-->
