--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <link rel="stylesheet" href="hamburgers.css">
         
         <!--Logotipo del sitio web en el buscador de Google (de momento no me funciona el enlace)-->
-        <link rel="shorcut-icon" type="image/x-icon" href="Imagenes/Logo.ico">
+        <link rel="shorcut-icon" type="image/x-icon" href="logo.ico"/>
     </head>
 
     
@@ -87,7 +87,10 @@
                  <!---Segundo artículo: Instagram Feed--->
                  <article>
                     <div class="contenedor-instagram">
-                        <!--<div><h1 class="arturofxtrader"><a href="">@ARTUROFXTRADER</a></h1></div>-->
+
+                        <p class="siguenos">Síguenos en Instagram <a href="https://www.instagram.com/arturofxtrader/">@arturofxtrader</a></p>
+                        <br>
+
                         <div class="insta01-02-03">
                             <a href="https://www.instagram.com/p/B7ltrZ8o2y6/?utm_source=ig_web_copy_link">
                                 <div class="insta"><img src="00.jpg" width="100%" height="auto"></div>
