--- a/contacto.html
+++ b/contacto.html
@@ -57,7 +57,7 @@
         <section class="main">
             <section class="articles">
                 <!---Primer artículo: Contacto--->
-                <form id="contactform" action="https://formspree.io/arthur_n09@hotmail.com" method="POST">
+                <form action="https://formspree.io/f/arthur_n09@hotmail.com" method="POST">
                     <label>
                       Nombre:
                     <input type="text" name="nombre" required="required" placeholder="Escribe tu nombre" pattern="[a-zA-Z]{1,10}" maxlength="10">
