--- a/contacto.html
+++ b/contacto.html
@@ -57,31 +57,23 @@
         <section class="main">
             <section class="articles">
                 <!---Primer artículo: Contacto--->
-                <form action="https://formspree.io/f/arthur_n09@hotmail.com" method="POST">
-                    <label>
-                      Nombre:
-                    <input type="text" name="nombre" required="required" placeholder="Escribe tu nombre" pattern="[a-zA-Z]{1,10}" maxlength="10">
-                    </label>
-                    <label>
-                      Email:
-                     <input type="text" name="_replyto" required="required" placeholder="Escribe tu email">
-                     </label>
-                     <label>
-                      Mensaje:
-                     <textarea name="mensaje" required="required" placeholder="Escribe tu mensaje"></textarea>
-                     </label>
-                    <input type="hidden" name="_next" value="//molotradecompany.com/index.html"/> <!--Volver a esta página después de enviar el mensaje-->
-                    <input type="hidden" name="_subject" value="Nuevo mensaje de mi sitio web"/>
-                    <input type="text" name="_gotcha" style="display:none"/> <!--Para evitar correos spam-->
-                    <script>
-                        var contactform =  document.getElementById('contactform');
-                        contactform.setAttribute('action', '//formspree.io/' + 'arthur_n09' + '@' + 'hotmail' + '.' + 'com');
-                    </script>
-                  
-                    <!-- your other form fields go here -->
-                  
-                    <button type="submit">ENVIAR</button>
-                </form>
+                <form
+  action="https://formspree.io/f/arthur_n09@hotmail.com"
+  method="POST"
+>
+  <label>
+    Your email:
+    <input type="text" name="_replyto">
+  </label>
+  <label>
+    Your message:
+    <textarea name="message"></textarea>
+  </label>
+
+  <!-- your other form fields go here -->
+
+  <button type="submit">Send</button>
+</form>
                 </br>
                 </br>
             </section>
