--- a/contacto.html
+++ b/contacto.html
@@ -57,30 +57,33 @@
         <section class="main">
             <section class="articles">
                 <!---Primer artículo: Contacto--->
-                <form id="contactform" action="https://formspree.io/f/arthur_n09@hotmail.com" method="POST">
-                    <label>
-                      Nombre:
-                    <input type="text" name="nombre" required="required" placeholder="Escribe tu nombre" pattern="[a-zA-Z]{1,10}" maxlength="10">
-                    </label>
-                    <label>
-                      Email:
-                     <input type="text" name="_replyto" required="required" placeholder="Escribe tu email">
-                     </label>
+                <form action="https://formspree.io/forms/xwkwnzvq/integration" method="POST">
                      <label>
-                      Mensaje:
-                     <textarea name="mensaje" required="required" placeholder="Escribe tu mensaje"></textarea>
+                        Nombre:
+                        <input type="text" name="nombre" required="required" placeholder="Escribe tu nombre" pattern="[a-zA-Z]{1,10}" maxlength="10">
                      </label>
-                    <input type="hidden" name="_next" value="//molotradecompany.com/index.html"/> <!--Volver a esta página después de enviar el mensaje-->
-                    <input type="hidden" name="_subject" value="Nuevo mensaje de mi sitio web"/>
-                    <input type="text" name="_gotcha" style="display:none"/> <!--Para evitar correos spam-->
-                    <script>
+
+                     <label>
+                        Email:
+                        <input type="text" name="_replyto" required="required" placeholder="Escribe tu email">
+                     </label>
+
+                     <label>
+                        Mensaje:
+                        <textarea name="mensaje" required="required" placeholder="Escribe tu mensaje"></textarea>
+                     </label>
+
+                     <input type="hidden" name="_next" value="//molotradecompany.com/index.html"/> <!--Volver a esta página después de enviar el mensaje-->
+                     <input type="hidden" name="_subject" value="Nuevo mensaje de mi sitio web"/>
+                     <input type="text" name="_gotcha" style="display:none"/> <!--Para evitar correos spam-->
+
+                     <script>
                         var contactform =  document.getElementById('contactform');
                         contactform.setAttribute('action', '//formspree.io/' + 'arthur_n09' + '@' + 'hotmail' + '.' + 'com');
-                    </script>
-                  
-                    <!-- your other form fields go here -->
-                  
-                    <button type="submit">ENVIAR</button>
+                     </script>
+
+                     <!-- your other form fields go here -->     
+                     <button type="submit">ENVIAR</button>
                 </form>
                 </br>
                 </br>
