--- a/contacto.html
+++ b/contacto.html
@@ -58,7 +58,7 @@
             <section class="articles">
                 <!---Primer artículo: Contacto--->
                 <form
-  action="https://formspree.io/forms/xwkwnzvq/integration" method="POST">
+  action="https://formspree.io/f/xwkwnzvq" method="POST">
   	 <label>
         Nombre:
       	<input type="text" name="nombre" required="required" placeholder="Escribe tu nombre" pattern="[a-zA-Z]{1,10}" maxlength="10">
